<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="20dp"
    android:backgroundTint="@color/white"
    app:cardElevation="120dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/title_font"
            android:gravity="center"
            android:text="@string/exit_menu_title"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yesButton"
                android:fontFamily="@font/text_font"
                android:textSize="13sp"
                android:backgroundTint="#A6A6A6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/exit_yes" />

            <Button
                android:id="@+id/noButton"
                android:fontFamily="@font/text_font"
                android:textSize="13sp"
                android:backgroundTint="@color/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_no" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>