<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <VideoView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/title_font"
        android:text="@string/main_title"
        android:textColor="@color/darkgrey"
        android:textSize="55dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_button_start"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:backgroundTint="@color/pink"
        android:fontFamily="@font/text_font"
        android:textSize="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/main_button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Button
        android:id="@+id/main_button_settings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:fontFamily="@font/text_font"
        android:padding="20dp"
        android:text="@string/main_button_settings"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_button_start" />


</androidx.constraintlayout.widget.ConstraintLayout>